Extra padding at top of page to fix mobile scroll to top bug, might look weird on desktop now though

--- a/src/views/HelpPage/HelpPage.styl
+++ b/src/views/HelpPage/HelpPage.styl
@@ -12,6 +12,7 @@
   align-items center
   justify-content space-between
   margin-bottom 20px
+  padding-top 20px
 
   +portrait() {
     justify-content flex-start
